Update 3.0.0 Windows Installation